lib/libremidi/tests/corpus/Invalid/No Header Chunk/imhawaii(1).mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|24 Apr 2000 09:08:02 -0000
vti_author:SR|hiponybb
vti_modifiedby:SR|hiponybb
vti_timecreated:TR|11 May 2000 20:09:50 -0000
vti_backlinkinfo:VX|index.htm
vti_extenderversion:SR|4.0.2.3712
vti_syncwith_localhost\\c\:\\my documents\\my webs\\baseball/c\:/my documents/my webs/baseball:TR|24 Apr 2000 09:08:02 -0000
